--- a/css/style.css
+++ b/css/style.css
@@ -381,3 +381,65 @@ body {
  border: none;
  margin-left: -3px;
 }
+
+/* Categories */
+
+.categories__inner{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.categories__item{
+  margin-bottom: 30px;
+  box-sizing: border-box;
+  border: 1px solid #CDCDCD;
+  width: 370px;
+  display: flex;
+  padding: 20px 20px 16px;
+  justify-content: space-between;
+  transition: all .3s;
+}
+
+.categories__item-info{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.categories__item-img{
+  text-align: center;
+  width: 50%;
+}
+
+.categories__item-img img{
+  max-width: 100%;
+}
+
+.categories__item-title{
+  font-weight: bold;
+  font-size: 23px;
+  line-height: 28px;
+  font-family: 'Barlow', sans-serif;
+  transition: all .3s;
+}
+
+.categories__item:hover{
+  box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
+}
+
+.categories__item:hover .categories__item-title {
+  color: #1C62CD;
+}
+
+.categories__item-text{
+  font-size: 14px;
+  line-height: 17px;
+  color: #C4C4C4;
+}
+
+.categories__item-text::after{
+  content: url('../images/link-arrow.svg');
+  padding-left: 2px;
+}
